[package]
name = "cell-machine-bs2k-mod"
version = "0.1.0"
authors = ["bs2kbs2k <bs2k@disroot.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_easings = "0.4.0"
bevy_egui = "0.6.1"
dyon = "0.46.0"
